src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
@media (max-width: 767px) {
  select, button {
    font-size: 16px !important;
  }
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

body {
  display: flex;
}

#root {
  display: flex;
  flex-grow: 1;
}

.App {
  display: flex;
  flex-grow: 1;
  flex-direction: column;
  margin: 0 auto;
}

.chat-message__avatar img {
  padding: calc(1em - (4.5px / 2)) 0;
  width: 34.5px;
  height: 34.5px;
  image-rendering: pixelated;
}

.chat-input__content {
  display: flex;
  flex-grow: 1;
  align-items: center;
  gap: 1em;
}

.chat-input__content__textarea {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  padding: 22px 0;
}
.chat-input__content__textarea textarea {
  width: 100%;
  box-sizing: border-box;
  border-radius: 2px; 
  overflow-y: hidden;
  resize: none;
  font-size: smaller;
  font-family: Arial;
  padding-left: 3px;
}

@media (max-width: 767px) {
  .chat-input__content__textarea textarea {
    font-size: 16px;
  }
  .chat-input__content__textarea {
    padding: 20.5px 0;
  }
}

.chat-message {
  display: flex;
  gap: 1em;
  max-width: 600px;
  flex-grow: 1;
}

.chat-message-wrapper {
  display: flex;
  justify-content: center;
  padding: 0 1em;
}
.chat-message-wrapper--bot {
  border-bottom: 1px solid;
  border-top: 1px solid;
  background-color: rgba(247,247,247);
  border-color: rgba(0,0,0,0.1);
}
.chat-message-wrapper--error {
  border-bottom: 1px solid;
  border-top: 1px solid;
  background-color: rgba(247, 28, 28, 0.1);
  border-color: rgba(247, 28, 28, 0.25);
}
.chat-message__content {
  flex-grow: 1;
  word-break: break-word;
}
.chat-message__content--error p {
  white-space: pre-wrap;
}

.chat-input-container {
  display: flex;
  justify-content: center;
  padding: 0 1em;
}

.chat-input {
  display: flex;
  flex-grow: 1;
  gap: 1em;
  max-width: 600px;
}

.chat-input__avatar {
  display: flex;
  align-items: center;
  padding-bottom: 3.5px;
}
.chat-input__avatar img {
  width: 34.5px;
  height: 34.5px;
  image-rendering: pixelated;
}

.lead-copy-container {
  display: flex;
  justify-content: center;
  padding: 0 1em;
}

.lead-copy {
  max-width: 600px;
  flex-grow: 1;
}

.notice-container {
  display: flex;
  justify-content: center;
  background-color: #efefef;
}
.notice {
  max-width: 600px;
  padding: 0.5em 1em;
  text-align: center;
}
.header-container {
  display: flex;
  justify-content: center;
  padding: 1.5em 1em;
}

.header {
  max-width: 600px;
  flex-grow: 1;
  display: flex;
  color: grey;
  gap: 1em;
}

.header-separator {
  color: lightgray;
}

.header-item a, .header-item .header-item-link {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

.code-block__code {
  margin-top: 0 !important;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
}

.code-block__header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #2d2d2d;
  background-color: hsl(213 39% 18% / 1);
  padding: 0.5rem 1rem;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

.code-block__language {
  color: #a5a5a5;
  font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
  font-size: smaller;
}

.code-block__copy-button {
  background-color: hsl(213 39% 11% / 1);
  color: #fff;
  border: none;
  border-radius: 3px;
  padding: 0.25rem 0.5rem;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.code-block__copy-button:hover {
  background-color: hsl(213 39% 28% / 1);
}

.code-block__copy-button:focus, .code-block__copy-button:active {
  outline: none;
}

@keyframes blink {
  0% { opacity: 1; }
  50% { opacity: 0; }
  100% { opacity: 1; }
}

.blinking-cursor {
  display: inline-block;
  width: 0.6em;
  height: 1.2em;
  background-color: black;
  animation: blink 1s step-end infinite;
  position: absolute;
}

.blinking-cursor--code {
  background-color: white;
  width: 0.65em;
  height: 1.5em;
}

.chat-message__content td, .chat-message__content th {
  border: 1px solid #767676;
  padding: 0.25em 0.5em;
}

.chat-message__content table {
  border-collapse: collapse;
  margin-block-start: 1em;
  margin-block-end: 1em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
}

.chat-message__content blockquote {
  padding-inline-start: 20px;
  border-left: 2px solid grey;
  margin: 0px;
  display: inline-block;
}

.chat-message__content ul, .chat-message__content ol {
  padding-inline-start: 1em;
}

